HKA 12.11.13 Tasks events nots in each Objects

--- a/templates/base.html
+++ b/templates/base.html
@@ -180,9 +180,9 @@
       2013 &copy; Metronic by keenthemes.
     </div>
     <div class="footer-tools">
-      <span class="go-top">
+      <!--span class="go-top">
       <i class="icon-angle-up"></i>
-      </span>
+      </span-->
     </div>
   </div>
   <!-- END FOOTER -->
