--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -120,9 +120,9 @@
                 <div class="dashboard-stat cards">
                   
                   <div class="details">
-                    <a href="/#/opportunities/show/<%= opportunity.id %>"><h3 class="relatedcardOppTitle">
+                    <a href="/#/opportunities/show/<%= opportunity.id %>"><h2 class="cardTitle">
                        <%=opportunity.description %>
-                    </h3></a>
+                    </h2></a>
                     <div class="desc">                           
                                     <span class="contact-title">$<%=opportunity.amount %> - <%=opportunity.stage %></span>
                                     <a  class="desc" href="/#/opportunities/industry/<%=opportunity.name%>">#<%=opportunity.name %></a>  
