--- a/templates/contacts/show.html
+++ b/templates/contacts/show.html
@@ -89,9 +89,9 @@
                                          
                                             
                                             <textarea id="noteBody" class="input-block-level ng-pristine ng-valid" rows="3" ng-model="note.content"></textarea>
-                                            <input ng-init="note.organization=1" required="" id="id_organization" type="hidden" name="organization" value="1"> 
+                                            <!--input ng-init="note.organization=1" required="" id="id_organization" type="hidden" name="organization" value="1"--> 
                                   
-                                            <input type="hidden" id="id_related_object" ng-init="note.related_object=1" value="1">
+                                            <!--input type="hidden" id="id_related_object" ng-init="note.related_object=1" value="1"-->
                                           
                                          
                                          <div class="pull-right">
@@ -110,7 +110,7 @@
                                 <div class="message">
                                   <span class="arrow"></span>
                                   <a href="#" class="name"><%= topic.last_updater.google_display_name%></a>
-                                  <span class="datetime">at Jul 25, 2012 11:09</span>
+                                  <span class="datetime">at <%=topic.updated_at %></span>
                                   <span class="body">
                                   <a href="#/accounts/show/1/notes/22" class="discussion-content"><strong class="ng-binding"><%= topic.title%></strong><span class="excerpt ng-binding"> - <%= topic.excerpt%></span><span class="chat-meta pull-right" ng-show="topic.comments"><i class="icon-comment"></i> <%= topic.comments%> comments</span></a>
                                   </span>
