--- a/templates/shows/list.html
+++ b/templates/shows/list.html
@@ -106,7 +106,7 @@
                 <div class="dashboard-stat cards cards-show">
                   
                   <div class="details">
-                    <a href="/#/accounts/show/<%= account.id %>"><h3 class="relatedcardOppTitle">
+                    <a href="/#/shows/show/<%= show.id %>"><h3 class="relatedcardOppTitle">
                                     <%= show.title%>
                                     </h3></a>
                     <div class="desc">                           
