--- a/templates/base.html
+++ b/templates/base.html
@@ -303,6 +303,7 @@
   <script src="static/app/scripts/controllers/contactcontroller.js"></script>  
   <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
   <script src="static/app/scripts/controllers/showcontrollers.js" ></script>
+  <script src="static/app/scripts/controllers/notecontrollers.js"></script> 
   <!--Admin controllers-->
   <script src="static/app/scripts/controllers/usercontrollers.js" ></script>
   <script src="static/app/scripts/controllers/groupcontrollers.js" ></script>
