--- a/templates/base.html
+++ b/templates/base.html
@@ -224,6 +224,7 @@
     console.log('callback');
     if (--apisToLoad == 0) {
       signin(true, userAuthed);
+
     }
   }
   
@@ -238,9 +239,11 @@
         }
        }
 
-      apisToLoad = 1; // must match number of calls to gapi.client.load()
+      apisToLoad = 3; // must match number of calls to gapi.client.load()
       console.log('before loading');
       gapi.client.load('crmengine', 'v1', callback, ROOT);
+      gapi.load('picker', {'callback': callback});
+      gapi.client.load('drive','v2', callback);
       
     }
     function apiLoaded(){
