working on documents.insert api

--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -703,8 +703,8 @@
             </div>
             <div class="modal-body">
                      <div class="controls controls-row">
-                                          <form id="addTask" ng-submit="createDocument(document)" class="ng-pristine ng-valid">
-                                                  <input class="input-block-level" autofocus type="text" placeholder="Enter a new document name" id="taskTitle" ng-model="document.title">
+                                          <form id="addTask" ng-submit="createDocument(newdocument)" class="ng-pristine ng-valid">
+                                                  <input class="input-block-level" autofocus type="text" placeholder="Enter a new document name" id="taskTitle" ng-model="newdocument.title" required>
                                                   
                                                   
                      </div>
